@@ -1,3 +1,8 @@
+2010-11-09  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* example/swig/yarp.i: support PortReader::read callback
+	in SWIG-wrapped code [thanks Emanuel Sousa]
+
 2010-11-08  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>
 
 	* src/doc/persistent_connections.dox: add notes about using 
@@ -16,7 +21,7 @@
 
 	* src\modules\laserHokuyo\*.*
 	Added deviceDriver for Hokuyo UTM30LX laser range finder.
-	
+
 2010-10-21  Marco Randazzo <marco.randazzo@iit.it>
 
 	* src\modules\serial\SerialDeviceDriver.cpp
